--- a/index.html
+++ b/index.html
@@ -393,9 +393,10 @@
         </div>
       </section>
     </main>
-    <!-- Footer -->
+    <!-- Footer-->
     <footer class="footer">
       <div class="footer-container container">
+        <!-- Footer logo -->
         <div class="footer-logo-container">
           <a href="./index.html" class="logo link"
             >Web<span class="logo-white">Studio</span>
@@ -405,6 +406,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
+        <!-- Footer social -->
         <div class="footer-social-conteiner">
           <p class="footer-social-text">Social media</p>
           <ul class="footer-social-list list">
@@ -438,6 +440,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-container">
+          <p class="footer-social-text">Subscribe</p>
+          <form class="footer-form" name="subscribe-form">
+            <label>
+              <input
+                class="footer-form-imput"
+                name="subscribe-email"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- Modal window -->
@@ -448,6 +469,10 @@
             <use href="./images/icons.svg#icon-close-black-18dp"></use>
           </svg>
         </button>
+
+        <strong class="modal-caption"
+          >Leave your contacts and we will call you back</strong
+        >
       </div>
     </div>
     <script src="./js/modal.js"></script>
