--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
             </li>
           </ul>
         </div>
+        <!-- Footer form -->
         <div class="footer-form-container">
           <p class="footer-social-text">Subscribe</p>
           <form class="footer-form" name="subscribe-form">
@@ -462,7 +463,7 @@
       </div>
     </footer>
     <!-- Modal window -->
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="button-image" width="8" height="8">
@@ -471,8 +472,91 @@
         </button>
 
         <strong class="modal-caption"
-          >Leave your contacts and we will call you back</strong
-        >
+          >Leave your contacts and we will call you back
+        </strong>
+        <form class="modal-form" name="communication_form">
+          <label class="modal-form-label" for="user-name">Name</label>
+          <div class="modal-form-field">
+            <input
+              class="modal-form-input"
+              type="text"
+              name="user-name"
+              placeholder=""
+              id="user-name"
+              required
+            />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-person-black"></use>
+            </svg>
+          </div>
+
+          <label class="modal-form-label" for="user-phone">Phone</label>
+          <div class="modal-form-field">
+            <input
+              class="modal-form-input"
+              type="tel"
+              name="user-phone"
+              placeholder=""
+              id="user-phone"
+              required
+            />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
+          </div>
+
+          <label class="modal-form-label" for="user-email">Email</label>
+          <div class="modal-form-field">
+            <input
+              class="modal-form-input"
+              type="email"
+              name="user-email"
+              placeholder=""
+              id="user-email"
+              required
+            />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-email-black"></use>
+            </svg>
+          </div>
+
+          <label class="modal-form-label" for="user-comment">Comment</label>
+          <div class="modal-form-container">
+            <textarea
+              class="modal-form-textarea"
+              name="user-comment"
+              id="user-comment"
+              rows="6"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <label class="modal-form-agreement">
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              name="user-agreement"
+              value="yes"
+            />
+            <span class="agreement-checkbox">
+              <svg class="agreement-checkbox-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-Vector"></use>
+              </svg>
+            </span>
+
+            <span class="modal-form-desc">
+              I accept the terms and conditions of the
+              <a
+                class="modal-form-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                >Privacy Policy
+              </a>
+            </span>
+          </label>
+          <button class="modal-form-btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
