--- a/portfolio.html
+++ b/portfolio.html
@@ -268,9 +268,10 @@
       </section>
     </main>
 
-    <!-- Footer content -->
+    <!-- Footer -->
     <footer class="footer">
       <div class="footer-container container">
+        <!--Footer logo  -->
         <div class="footer-logo-container">
           <a href="./index.html" class="logo link"
             >Web<span class="logo-white">Studio</span>
@@ -280,6 +281,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
+        <!-- Footer social -->
         <div class="footer-social-conteiner container">
           <p class="footer-social-text">Social media</p>
           <ul class="footer-social-list list">
@@ -312,6 +314,26 @@
               </a>
             </li>
           </ul>
+        </div>
+        <!--Footer form  -->
+        <div class="footer-form-container">
+          <p class="footer-social-text">Subscribe</p>
+          <form class="footer-form" name="subscribe-form">
+            <label>
+              <input
+                class="footer-form-imput"
+                name="subscribe-email"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
