--- a/portfolio.html
+++ b/portfolio.html
@@ -319,7 +319,7 @@
         <div class="footer-form-container">
           <p class="footer-social-text">Subscribe</p>
           <form class="footer-form" name="subscribe-form">
-            <label>
+            <label class="footer-form-label">
               <input
                 class="footer-form-imput"
                 name="subscribe-email"
