--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <div class="footer-form-container">
           <p class="footer-social-text">Subscribe</p>
           <form class="footer-form" name="subscribe-form">
-            <label>
+            <label class="footer-form-label">
               <input
                 class="footer-form-imput"
                 name="subscribe-email"
@@ -463,65 +463,70 @@
       </div>
     </footer>
     <!-- Modal window -->
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="button-image" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black-18dp"></use>
           </svg>
         </button>
-
-        <strong class="modal-caption"
-          >Leave your contacts and we will call you back
-        </strong>
-        <form class="modal-form" name="communication_form">
-          <label class="modal-form-label" for="user-name">Name</label>
-          <div class="modal-form-field">
-            <input
-              class="modal-form-input"
-              type="text"
-              name="user-name"
-              placeholder=""
-              id="user-name"
-              required
-            />
-            <svg class="modal-form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-person-black"></use>
-            </svg>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form classm="modal-form" name="communication_form">
+          <div class="modal-form-container">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="user-name"
+                placeholder=""
+                id="user-name"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
           </div>
 
-          <label class="modal-form-label" for="user-phone">Phone</label>
-          <div class="modal-form-field">
-            <input
-              class="modal-form-input"
-              type="tel"
-              name="user-phone"
-              placeholder=""
-              id="user-phone"
-              required
-            />
-            <svg class="modal-form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone-black"></use>
-            </svg>
+          <div class="modal-form-container">
+            <label class="modal-form-label" for="user-phone">Phone</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="user-phone"
+                placeholder=""
+                id="user-phone"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
           </div>
 
-          <label class="modal-form-label" for="user-email">Email</label>
-          <div class="modal-form-field">
-            <input
-              class="modal-form-input"
-              type="email"
-              name="user-email"
-              placeholder=""
-              id="user-email"
-              required
-            />
-            <svg class="modal-form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email-black"></use>
-            </svg>
+          <div class="modal-form-container">
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-form-field">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="user-email"
+                placeholder=""
+                id="user-email"
+                required
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
           </div>
 
           <label class="modal-form-label" for="user-comment">Comment</label>
-          <div class="modal-form-container">
+          <div class="modal-form-comment">
             <textarea
               class="modal-form-textarea"
               name="user-comment"
