--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         <p class="modal-caption">
           Leave your contacts and we will call you back
         </p>
-        <form classm="modal-form" name="communication_form">
+        <form class="modal-form" name="communication_form">
           <div class="modal-form-container">
             <label class="modal-form-label" for="user-name">Name</label>
             <div class="modal-form-field">
