--- a/index.html
+++ b/index.html
@@ -525,8 +525,8 @@
             </div>
           </div>
 
-          <label class="modal-form-label" for="user-comment">Comment</label>
           <div class="modal-form-comment">
+            <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-form-textarea"
               name="user-comment"
@@ -536,30 +536,25 @@
             ></textarea>
           </div>
 
-          <label class="modal-form-agreement">
+          <div class="modal-form-checkbox">
             <input
               class="visually-hidden"
               type="checkbox"
               name="user-agreement"
-              value="yes"
+              id="user-agreement"
+              value="true"
             />
-            <span class="agreement-checkbox">
-              <svg class="agreement-checkbox-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-Vector"></use>
-              </svg>
-            </span>
-
-            <span class="modal-form-desc">
+            <label class="modal-checkbox-text" for="user-agreement">
+              <span class="agreement-checkbox">
+                <svg class="agreement-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </span>
               I accept the terms and conditions of the
-              <a
-                class="modal-form-link"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer"
-                >Privacy Policy
-              </a>
-            </span>
-          </label>
+              <a class="modal-form-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+
           <button class="modal-form-btn" type="submit">Send</button>
         </form>
       </div>
