--- a/index.html
+++ b/index.html
@@ -540,11 +540,11 @@
             <input
               class="visually-hidden"
               type="checkbox"
-              name="user-agreement"
-              id="user-agreement"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
             />
-            <label class="modal-checkbox-text" for="user-agreement">
+            <label class="modal-checkbox-text" for="user-privacy">
               <span class="agreement-checkbox">
                 <svg class="agreement-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
